--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             </div>
                             <div class="ml-4">
                                 <h3 class="text-lg leading-6 font-medium text-gray-900">Tech-Driven Solutions</h3>
-                                <极速赛车开奖直播p class="mt-2 text-base text-gray-600">
+                                <p class="mt-2 text-base text-gray-600">
                                     We develop and utilize cutting-edge tools and methodologies to enhance our investigative capabilities.
                                 </p>
                             </div>
