--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <div class="ml-4">
                                 <h3 class="text-lg leading-6 font-medium text-gray-900">Collaborative Approach</h3>
                                 <p class="mt-2 text-base text-gray-600">
-                                    Our team works collaboratively with law enforcement, NGOs, and families to maximize the impact of our work.
+                                    Our team works collaboratively with Activists, Journalists, NGOs, and families to maximize the impact of our work.
                                 </p>
                             </div>
                         </div>
@@ -253,7 +253,7 @@
                                 </div>
                                 <h3 class="mt-8 text-lg font-medium text-gray-900 text-center">Education</h3>
                                 <p class="mt-5 text-base text-gray-600">
-                                    We conduct training programs to build OSINT capacity among humanitarian organizations and law enforcement agencies.
+                                    We conduct training programs to build OSINT capacity among humanitarian organizations and motivated volunteers.
                                 </p>
                             </div>
                         </div>
@@ -298,7 +298,7 @@
                         <i class="fas fa-hands-helping text-2xl"></i>
                     </div>
                     <div class="mt-5">
-                        <p class="text-5xl font-extrabold text-white">50+</p>
+                        <p class="text-5xl font-extrabold text-white">30+</p>
                         <p class="mt-1 text-base text-gray-300">Organizations Supported</p>
                     </div>
                 </div>
@@ -326,7 +326,7 @@
                             </div>
                             <h3 class="mt-8 text-lg font-medium text-gray-900">Cybersecurity Experts</h3>
                             <p class="mt-5 text-base text-gray-600">
-                                Digital forensics specialists with experience in law enforcement and intelligence.
+                                Digital forensics specialists with experience in research and intelligence.
                             </p>
                         </div>
                     </div>
