--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                             </div>
                             <h3 class="mt-8 text-lg font-medium text-gray-900">Secure Drop</h3>
                             <p class="mt-5 text-base text-gray-600">
-                                PGP Key: 0xABCDEF1234567890
+                                PGP Key: -
                             </p>
                         </div>
                     </div>
