--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
             <div class="lg:grid lg:grid-cols-2 lg:gap-8 lg:items-center">
                 <div class="relative lg:max-w-lg lg:mx-auto">
                     <div class="relative rounded-lg shadow-lg overflow-hidden">
-                        <img class="w-full h-auto" src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Digital investigation">
+                        <img class="w-full h-auto" src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Digital investigation">
                         <div class="absolute inset-0 bg-gray-900 opacity-20"></div>
                     </div>
                     <div class="mt-6 relative rounded-lg shadow-lg overflow-hidden">
-                        <img class="w-full h-auto" src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Team collaboration">
+                        <img class="w-full h-auto" src="https://images.unsplash.com/photo-1516382799247-87df95d790b7?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                         <div class="absolute inset-0 bg-gray-900 opacity-20"></div>
                     </div>
                 </div>
